Package: R.oo
=============

Version: 1.10.0 [2012-10-14]
o GENERALIZATION: Now <Class>$<staticFcn>(...) calls the corresponding
  generic function <staticFcn>(static, ...), where 'static' is the
  static object of Class <Class>.  This allows for using NextMethod()
  in static functions.


Version: 1.9.10 [2012-09-14]
o ROBUSTNESS/BUG FIX: The Exception constructor could generate warning
  'In if (regexpr("^function\\(", code) != -1) return("") : the 
  condition has length > 1 and only the first element will be used'
  occuring in its local fcnName() function.  Now code no longer assumes
  that 'code' is of length 1.


Version: 1.9.9 [2012-09-11]
o Now throw() for Exception aborts (after signalling and outputting
  the message) by calling stop().  Ideally it should utilize abort(),
  but the new version of abort() may be "caught" is certain cases.
o ROBUSTNESS/CRAN POLICY: Updated abort() for condition to utilize
  invokeRestart("abort").  This avoids having to call 
  .Internal(.signalCondition(...)).  It also means that the message
  outputted by abort() no longer starts with a "Error in ...:" line.
  abort() immitates how stop() works but without the signalling.
o BUG FIX: getContribUrl() and getDevelUrl() would give an error if
  corresponding fields did not exists in the DESCRIPTION file.  Now
  they return NAs just as getUrl().


Version: 1.9.8 [2012-06-22]
o GENERALIZATION: Added newInstance() for BasicObject.
o ROBUSTNESS: Now constructor BasicObject() is guaranteed to
  return an object with non-duplicated class attribute elements.


Version: 1.9.7 [2012-06-20]
o CLEANUP: Dropped non-used adjusted getClass() generic function,
  which means that now there is one less function masking the
  'methods' package.
o BUG FIX/GENERALIZATION: throw() for Exception would give an error on
  R < 2.14.0, where no generic getCall() exists.  Now it works for
  all versions of R.


Version: 1.9.6 [2012-06-11]
o BUG FIX/GENERALIZATION: Rdoc$getKeywords() now uses system